objects/Survey_Issue__c.object
<CustomObject>
    <fields>
        <fullName>AnswerText__c</fullName>
        <description>It is only for Issue_Survey_Outbound feed.</description>
        <formula>Answer__r.Answer__c</formula>
        <label>AnswerText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_ID__c</fullName>
        <description>It is only for Issue_Survey_Outbound feed.</description>
        <formula>Answer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Answer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_Sequence__c</fullName>
        <label>Answer Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answer</label>
        <referenceTo>Answer__c</referenceTo>
        <relationshipLabel>Survey Issues</relationshipLabel>
        <relationshipName>Survey_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Id__c</fullName>
        <description>It is only for Issue_Survey_Outbound feed.</description>
        <formula>Survey__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Issue</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Issues</relationshipLabel>
        <relationshipName>Survey_Issues</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_Question_ID__c</fullName>
        <description>It is only for Issue_Survey_Outbound feed.</description>
        <formula>Question__r.PMQuestionID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Question ID</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quest_Multi_Answers__c</fullName>
        <description>It is only for Issue_Survey_Outbound feed.</description>
        <formula>Question__r.MultiAnswers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quest Multi Answers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionText__c</fullName>
        <description>It is only for Issue_Survey_Outbound feed.</description>
        <formula>Question__r.Question__c</formula>
        <label>QuestionText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_ID__c</fullName>
        <description>It is only for Issue_Survey_Outbound feed.</description>
        <formula>Question__r.Name</formula>
        <label>Question ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Sequence__c</fullName>
        <label>Question Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Survey Issues</relationshipLabel>
        <relationshipName>Survey_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <description>It is only for Issue_Survey_Outbound feed.</description>
        <formula>Survey__r.Survey_Name__c</formula>
        <label>Survey Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Issues</relationshipLabel>
        <relationshipName>Survey_Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transacation_Id__c</fullName>
        <description>It is only for Issue_Survey_Outbound feed.</description>
        <formula>Transaction__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transacation Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transaction Management</label>
        <referenceTo>Transaction_Management__c</referenceTo>
        <relationshipLabel>Survey Issues</relationshipLabel>
        <relationshipName>Survey_Issues</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for checking if the record is ready to send in feed.</description>
        <label>isReviewed</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey Issue</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Survey Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>